# benign-attention

./: .gitignore  README.md  main.py  main_bert.py  main_bert_baseline.py  main_bert_finetune.py  main_bert_last_layer.py  main_math_frak.py  main_one_layer.py  main_pt.py  main_real_setting.py  main_synthetic.py  main_vit.py  main_vit_baseline.py  main_vit_finetune.py  main_vit_last_layer.py  main_vit_one_layer.py  plot.ipynb  pyproject.toml  requirements.txt  sandbox.ipynb  tmp.sh
config/: main.yaml  main_bert.yaml  main_one_layer.yaml  main_real_setting.yaml  main_vit.yaml  main_vit_one_layer.yaml
config/dataset/: agnews.yaml  breastmnist.yaml  cifar10.yaml  mnist.yaml  mnist_snr.yaml  pneumoniamnist.yaml  sst2.yaml  stl10.yaml  trec.yaml
config/optimizer/: adamw.yaml  sgd.yaml
src/: distributed_utils.py  hf_utils.py  utils.py
src/datasets/: agnews.py  cifar.py  glue.py  medmnist.py  mnist.py  noisy_dataset.py  stl10.py  trec.py  utils.py
src/models/: bert.py  vit.py
